# native-messaging

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  coverage.yml  release.yml
src/: host.rs  lib.rs
src/install/: browsers.toml  manifest.rs  mod.rs  paths.rs  winreg.rs
tests/: host_encode_decode.rs  install_remove_user_scope.rs  install_unix_user.rs  install_windows_user.rs  manifest_content.rs  manifest_validation.rs  no_default_features.rs  path_resolver.rs  read_write_test.rs  verify_windows_registry.rs
tests/common/: mod.rs
